--- a/commentform.html
+++ b/commentform.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body style="background: #28282b">
-    <a href="Formcontents.html#contents">Back to contents</a>
+    <a href="index.html#contents">Back to contents</a>
     <br /><br /><br />
     <table border="0" cellpadding="20" align="center">
       <tr>
