--- a/contactform.html
+++ b/contactform.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <table width="100%">
-      <a href="Formcontents.html#contents">Back to contents</a>
+      <a href="index.html#contents">Back to contents</a>
       <tr>
         <td width="30%">
           &emsp;
