--- a/departureform.html
+++ b/departureform.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <a href="Formcontents.html#contents">Back to contents</a>
+    <a href="index.html#contents">Back to contents</a>
     <form method="post">
       <table align="center" bgcolor="#f5f5f5" cellpadding="20">
         <tr>
