--- a/feedbackform.html
+++ b/feedbackform.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body background="hotel-02.jpg">
-    <a href="Formcontents.html#contents">Back to contents</a>
+    <a href="index.html#contents">Back to contents</a>
     <br />
     <table bgcolor="#f5f5f5" border="0" cellpadding="20" align="center">
       <tr>
