--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body background="blue.png">
-    <a href="Formcontents.html#contents">Back to contents</a>
+    <a href="index.html#contents">Back to contents</a>
     <table cellspacing="20" cellpadding="20" align="center">
       <br /><br /><br /><br /><br /><br />
       <tr>
