--- a/loginform.html
+++ b/loginform.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background: #28282b">
     <table border="0" cellpadding="30" width="100%">
-      <a href="Formcontents.html#contents">Back to contents</a>
+      <a href="index.html#contents">Back to contents</a>
       <tr>
         <td width="60%" align="center">
           <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
