--- a/shippingaddress.html
+++ b/shippingaddress.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body background="background.jpg">
-    <a href="Formcontents.html#contents">Back to contents</a>
+    <a href="index.html#contents">Back to contents</a>
     <table align="center" cellpadding="30">
       <tr>
         <br /><br /><br /><br />
