--- a/signupform.html
+++ b/signupform.html
@@ -3,10 +3,8 @@
   <head><title>SignUp Form</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
   <body style="background:#70a1ff">
-    <table align="center" cellpadding="25">
-        
-          <a href="Formcontents.html#contents">Back to contents</a>
-        
+    <table align="center" cellpadding="25">      
+      <a href="index.html#contents">Back to contents</a>   
       <tr>
         <br><br><br><br><br><br><br>
        <td bgcolor="#f5f5f5" > 
