--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>CKS Forms</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body background="background.jpg">
     <table bgcolor="#f5f5f5" align="center" cellpadding="20">
